mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_self_common.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Cannot use 'self' in a common method
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_self_common.mux:4:5
   |
 4 |     self.x
   |     ^^^^
